# argumentation-management

./: .dockerignore  .flake8  .flake8_nb  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Test1_spacy.vrt  TestPlenary_spacy.vrt  Test_flair.vrt  Test_spacy.vrt  attribute_names.json  build.sh  codecov.yml  demo-notebook.ipynb  example_notebook_cqp.ipynb  install_cwb.sh  install_latest_models.sh  install_treetagger.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py  test.xml  test_class_spacy.vrt  test_new_spacy.vrt  test_package.py  testplenary_flair.vrt
.github/workflows/: ci.yml  docker.yml  docs.yml  publish-docs.yml
annotator/: __init__.py  attribute_names.json  base.py  example_stanza.json  input.json  input_schema.json  main.py  mflair.py  msomajo.py  mspacy.py  mstanza.py  mtreetagger.py  pipe.py  test_schema.ipynb  to_xml.py
annotator/test/: test_base.py  test_integration_adding_tags.py  test_integration_msomajo.py  test_integration_mspacy.py  test_integration_mstanza.py  test_integration_mtreetagger.py  test_main.py  test_mflair.py  test_msomajo.py  test_mspacy.py  test_mstanza.py  test_mtreetagger.py  test_pipe.py  test_to_xml.py
annotator/test/data/: example_en_stanza.txt  example_en_token_list.txt  example_en_word_list.txt  input.json
annotator/test/test_files/: example_de_somajo.vrt  example_en_sentences.txt  example_en_treetagger.vrt  input_stanza.json
docker/: get_models.py
docs/: demo-notebook.ipynb  myinput.json
docs/source/: annotator.rst  annotator.test.rst  conf.py  index.rst  modules.rst  nlpannotator.rst
nlpannotator/: __init__.py  base.py  install_treetagger.py  main.py  mflair.py  msomajo.py  mspacy.py  mstanza.py  mtreetagger.py  pipe.py  pytest.ini
nlpannotator/data/: input.json  input_schema.json
nlpannotator/test/: test_base.py  test_integration_msomajo.py  test_integration_mspacy.py  test_integration_mstanza.py  test_integration_mtreetagger.py  test_main.py  test_mflair.py  test_msomajo.py  test_mspacy.py  test_mstanza.py  test_mtreetagger.py  test_pipe.py
nlpannotator/test/data/: example_ja.txt  test.vrt  test_stanza_de.json  test_stanza_en.json
notebooks/: berkeley_test.ipynb  example_notebook_cqp.ipynb  flair_test.ipynb  gensim_test.ipynb  somajo_test.ipynb  sowemeta_test.ipynb  spacy tests.ipynb  spacy_tests.ipynb  stanza_test.ipynb  treetagger_tests.ipynb
source/: conf.py  modules.rst
src/: setup.py
src/annotator/: DemoNotebook.ipynb  Test_spacy.vrt  attribute_names.json  base.py  config  config.cfg  example_de.json  example_de.txt  get_test_xml.py  input.json  input_schema.json  main.py  mflair.py  msomajo.py  mspacy.py  mstanza.py  mtreetagger.py  output_de.vrt  output_en.vrt  pipe.py  requirements.txt  saved_main.txt  test_adding_tags.py  test_conifg_spacy.cfg  test_cwb_encoding_decoding.py  test_schema.ipynb  test_somajo.py  test_treetagger_pipe.py  test_vrt_input.py  test_xml_output.py  to_xml.py
src/annotator/test/: base.py  example_de_stanza.txt  example_en_stanza.txt  example_en_stanza_tok_pos_lemma.txt  input.json  input_short.json  input_stanza.json  pytest.ini  setup_tests.sh  test_base.py  test_integration_adding_tags.py  test_integration_msomajo.py  test_integration_mspacy.py  test_integration_mstanza.py  test_integration_mtreetagger.py  test_integration_pretokenize.py  test_mflair.py  test_msomajo.py  test_mspacy.py  test_mstanza.py  test_mtreetagger.py  test_pipe.py  test_spacy_model.py  test_spacy_model2.py  test_to_xml.py  test_vrt_input.py
src/annotator/test/test_files/: example_de.json  example_de.txt  example_de_somajo.vrt  example_de_stanza.txt  example_de_treetagger.vrt  example_en.json  example_en.txt  example_en.xml  example_en_stanza_tok_pos.txt  example_en_stanza_tok_pos_lemma.txt  example_en_test.vrt  example_en_treetagger.vrt  example_es.txt  example_pretokenized.vrt  input.json  input2.json  input_short.json  input_stanza.json  test.vrt  test_stanza_de.json  test_stanza_en.json
src/argpipe/: input.py
src/test/: aerzteblatt.csv
test/: context.py  setup_tests.sh  test_base.py  test_integration_adding_tags.py  test_integration_msomajo.py  test_integration_mspacy.py  test_integration_mstanza.py  test_integration_mtreetagger.py  test_mflair.py  test_msomajo.py  test_mspacy.py  test_mstanza.py  test_mtreetagger.py  test_pipe.py  test_to_xml.py
test/test_files/: example_en_somajo.vrt  example_en_stanza_tok.txt  input2.json
