[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "nlpannotator"
version = "1.0.3"
description = "Annotator combining different NLP pipelines"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.7, <4"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "spacy <3.5.0, >=3.4.0",
    "stanza",
    "flair",
    "SoMaJo >=2.0",
    "treetaggerwrapper",
    "jsonschema",
    "importlib-resources >=5.8",
]

[tool.setuptools.package-data]
# Include any *.jsno files found in the "data" subdirectory of "nlpannotator"
"nlpannotator.data" = ["*.json"]

[project.scripts]
nlpannotator_run = "nlpannotator.main:run"

[tool.setuptools]
packages = ["nlpannotator"]