[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "nlpannotator"
version = "1.0.5"
description = "Annotator combining different NLP pipelines"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.7, <4"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "spacy <3.5.0, >=3.4.0",
    "stanza <=1.4.0",
    "flair<=0.11.3",
    "SoMaJo",
    "treetaggerwrapper",
    "jsonschema",
    "importlib-resources >=5.8",
]

[tool.setuptools.package-data]
# Include any *.json files found in the "data" subdirectory of "nlpannotator"
"nlpannotator.data" = ["*.json"]
# include test data
"nlpannotator.test.data" = ["*.json","*.txt","*.vrt","*.xml"]


[project.scripts]
nlpannotator_run = "nlpannotator.main:run"
treetagger_install = "nlpannotator.install_treetagger:install_tagger"

[tool.setuptools]
packages = ["nlpannotator"]