[metadata]
name = nlpannotator
version = 0.1
author = Inga S. Ulusoy, Christian Delavier
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
description = Annotator combining different NLP pipelines
long_description = file: README.md
url = https://ssciwr.github.io/argumentation-management/
keywords = nlp, annotation, linguistics

[options]
packages = nlpannotator
python_requires = >=3.7, <4
install_requires = 
    spacy
    stanza
    flair
    somajo
    treetaggerwrapper
    jsonschema
    importlib-resources

[options.package_data]
# Include any *.json files found in the "data" subdirectory of the "annotator"
# package:
nlpannotator = data/*.json

[options.packages.find]
exclude =
    data*
    docker*
    docs*