[metadata]
name = nlpannotator
version = 1.0.2
author = Inga S. Ulusoy, Christian Delavier
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
description = Annotator combining different NLP pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ssciwr.github.io/argumentation-management/
keywords = nlp, annotation, linguistics

[options]
packages = nlpannotator
python_requires = >=3.7, <4
install_requires = 
    spacy <3.5.0, >=3.4.0
    stanza
    flair
    SoMaJo >=2.0
    treetaggerwrapper
    jsonschema
    importlib-resources >=5.8


[options.package_data]
# Include any *.json files found in the "data" subdirectory of the "annotator"
# package:
nlpannotator = data/*.json

[options.packages.find]
exclude =
    data*
    docker*
    docs*